[gd_scene load_steps=35 format=2]

[ext_resource path="res://assets/sprites/Enviroment/4 Animated objects/Money.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://HUD.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/Player/Shoot/Energy_Ball/EnergyBall.png_1.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/Player/Shoot/Energy_Ball/EnergyBall.png_4.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/Player/Shoot/Energy_Ball/EnergyBall.png_6.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/Player/Shoot/Energy_Ball/EnergyBall.png_9.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/Player/Shoot/Energy_Ball/EnergyBall.png_3.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/Player/Shoot/Energy_Ball/EnergyBall.png_8.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/Player/Shoot/Energy_Ball/EnergyBall.png_7.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/Player/Shoot/Energy_Ball/EnergyBall.png_2.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/Player/Shoot/Energy_Ball/EnergyBall.png_5.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/Fonts/OdibeeSans-Regular.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Health_theme.tres" type="Theme" id=14]
[ext_resource path="res://HealthB_theme.tres" type="Theme" id=15]
[ext_resource path="res://assets/sprites/Player/Idle/3.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/Player/Idle/2.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/Player/Idle/1.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/Player/Idle/4.png" type="Texture" id=19]
[ext_resource path="res://assets/audio/Enviroment/Money.wav" type="AudioStream" id=20]
[ext_resource path="res://assets/audio/Player/got_energy_ball.wav" type="AudioStream" id=21]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.513726, 0.890196, 0.556863, 0.807843 )
border_width_left = 10
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.768627, 0.901961, 0.694118, 1 )
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 30
shadow_color = Color( 0.0941176, 0.831373, 0.0509804, 1 )
shadow_size = 7
shadow_offset = Vector2( 0, -3 )
anti_aliasing = false
anti_aliasing_size = 9.866

[sub_resource type="DynamicFont" id=10]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.164706, 0.12549, 0.909804, 0.639216 )
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0823529, 0.164706, 0.309804, 1 )
border_blend = true
corner_radius_top_right = 20
corner_radius_bottom_right = 20
shadow_color = Color( 0.152941, 0.196078, 0.941176, 0.6 )
shadow_size = 7
shadow_offset = Vector2( 0, -3 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": true,
"name": "EnergyBall",
"speed": 6.0
} ]

[sub_resource type="DynamicFont" id=14]
size = 24
outline_size = 2
outline_color = Color( 0.0313726, 0.12549, 0.278431, 1 )
use_filter = true
extra_spacing_top = 1
extra_spacing_char = 1
font_data = ExtResource( 13 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Node2D" type="Node2D" parent="."]
visible = false

[node name="Money_Panel" type="Panel" parent="."]
modulate = Color( 0.101961, 0.858824, 0.0156863, 0.745098 )
self_modulate = Color( 1, 1, 1, 0.972549 )
anchor_right = 0.028
margin_left = 49.0
margin_top = 34.0
margin_right = 116.328
margin_bottom = 61.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money_Label" type="Label" parent="."]
margin_left = 94.0
margin_top = 41.0
margin_right = 128.0
margin_bottom = 55.0
rect_scale = Vector2( 1.3, 1.3 )
hint_tooltip = "Energy Balls left..."
mouse_filter = 1
mouse_default_cursor_shape = 16
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 10 )
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="AnimatedSprite" parent="."]
position = Vector2( 51, 48 )
scale = Vector2( 3.33333, 3.33333 )
frames = SubResource( 9 )
playing = true

[node name="EnergyBall_Panel" type="Panel" parent="."]
margin_left = 181.0
margin_top = 31.0
margin_right = 268.0
margin_bottom = 60.0
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyBall" type="AnimatedSprite" parent="."]
position = Vector2( 181.042, 45.125 )
scale = Vector2( 0.703776, 0.66856 )
frames = SubResource( 11 )
animation = "EnergyBall"
frame = 3
playing = true

[node name="EnergyBall_Label" type="Label" parent="."]
margin_left = 218.0
margin_top = 39.0
margin_right = 252.0
margin_bottom = 53.0
rect_scale = Vector2( 1.3, 1.3 )
hint_tooltip = "Energy Balls left..."
mouse_filter = 1
mouse_default_cursor_shape = 16
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 10 )
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarB" type="ProgressBar" parent="."]
margin_left = 665.0
margin_top = 27.0
margin_right = 994.0
margin_bottom = 59.0
theme = ExtResource( 15 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarF" type="ProgressBar" parent="."]
margin_left = 665.0
margin_top = 27.0
margin_right = 994.0
margin_bottom = 59.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0.027451, 0.917647, 0.854902, 1 )
custom_colors/font_color_shadow = Color( 0.901961, 0.945098, 0.952941, 1 )
custom_fonts/font = SubResource( 14 )
step = 5.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="AnimatedSprite" parent="."]
modulate = Color( 1.3, 1.3, 1.3, 1 )
position = Vector2( 997, 31 )
scale = Vector2( 1.75, 1.75 )
frames = SubResource( 15 )
frame = 5
playing = true

[node name="HealthTween" type="Tween" parent="."]

[node name="PulseTween" type="Tween" parent="."]

[node name="Eball" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -2.0

[node name="money" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -12.0

[connection signal="value_changed" from="HealthBarF" to="." method="_on_HealthBarF_value_changed"]
